No me acuerdo que es esto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.algebralineal.tfalgebralineal.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.algebralineal.tfalgebralineal.EncodeActivity" />
-        <activity android:name=".InformationActivity" />
         <activity android:name=".EncodeActivity" />
+        <activity android:name=".InformationActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
